...
      secondary={
        <SecondaryButton onPress={onRecoverWallet} fullWidth testID="select-recover-button">
          {t('wallet.recover_wallet')}
        </SecondaryButton>
      }
      action={
        <PrimaryButton onPress={onCreateWallet} fullWidth testID="select-create-button">
          {t('wallet.create_wallet')}
        </PrimaryButton>
      }
    />
  );
}
...
