...
                  valueFont="mono"
                />

                <KeyValueRow
                  layout="stacked"
                  label={
                    copied ? t('dapp.siws_copied', 'Copied') : t('dapp.siws_account', 'Account')
                  }
                  value={getShortAddress(siws.address)}
                  valueFont="mono"
                  testID="siws-account"
                  action={
                    <IconBubble
...
